# System-Programming-Exam-Project

./: .gitignore  README.md  main.rs
PRESENTAZIONE PROGETTO/: Multi-platform screen-grabbing utility.odp  Multi-platform screen-grabbing utility.pptx
application/: Cargo.toml
application/src/: main.rs
application/src/custom_widget/: alert.rs  colored_button.rs  custom_slider.rs  custom_zstack.rs  delay_button.rs  mod.rs  over_image.rs  resizable_box.rs  screenshot_image.rs  selected_rect.rs  shortcut_keys.rs  take_screenshot_button.rs
release/: application.d
release/.fingerprint/ab_glyph_rasterizer-0e563556a462b427/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
release/.fingerprint/adler-4439a46791a4b2d0/: lib-adler  lib-adler.json
release/.fingerprint/anyhow-377e38a0324e3062/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/anyhow-389b91b216d74b93/: lib-anyhow  lib-anyhow.json
release/.fingerprint/anyhow-43d2091e2454d4d1/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/anyhow-e2dfa5be9112cb89/: lib-anyhow  lib-anyhow.json
release/.fingerprint/application-1c2079040abe1e2e/: bin-application  bin-application.json  dep-bin-application
release/.fingerprint/approx-6a87a156616a8079/: lib-approx  lib-approx.json
release/.fingerprint/arrayref-4b3468d598b0a2b4/: lib-arrayref  lib-arrayref.json
release/.fingerprint/arrayvec-c351842c09d0b227/: lib-arrayvec  lib-arrayvec.json
release/.fingerprint/atk-a8b2679088912451/: lib-atk  lib-atk.json
(+735 files in other folders)
