[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Pietro Bertorelle","Francesco Abate","Elio Magliari"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
screenshots = "0.7.3"
tracing = "0.1.37"
[dependencies.druid]
version = "0.8.3"
features = ["im", "svg", "image-all"]
